src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVXConditionalRender_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVXConditionalRender_StringErrorContext.class */
public final class NVXConditionalRender_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBeginConditionalRenderNVX(I)V", "net/labymod/core/laby3d/opengl/error/generated/NVXConditionalRenderErrorContext");
        methods.put("glEndConditionalRenderNVX()V", "net/labymod/core/laby3d/opengl/error/generated/NVXConditionalRenderErrorContext");
        return methods;
    }
}
